scenery/tests/errors/invalid-anchor-ref-anchor.typ
// expected: anchor must be a string or angle
#import "/lib.typ": anchor-ref
#anchor-ref("a", anchor: 42)
